<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textStyle="bold"
            android:textSize="23sp"
            tools:text="@string/edit_title"
            app:layout_constraintBottom_toTopOf="@id/item_text_description"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/item_image_popup_menu">
        </TextView>

        <ImageView
            android:id="@+id/item_image_popup_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert_black_24dp"
            app:layout_constraintEnd_toEndOf="parent">
        </ImageView>

        <CheckBox
            android:id="@+id/item_check_select_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/item_text_description"
            app:layout_constraintTop_toBottomOf="@id/item_text_title">
        </CheckBox>

        <TextView
            android:id="@+id/item_text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:textSize="17sp"
            tools:text="@string/edit_description"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_text_title">
        </TextView>

        <TextView
            android:id="@+id/item_text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textSize="17sp"
            tools:text="@string/text_date"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_text_description">
        </TextView>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>